<resources>
    <string name="app_name">Bilibili</string>

    <!--网络错误-->
    <string name="error_tips">不妙！加载失败了ヽ(≧Д≦)ノ\n 告诉大佬一些可能的原因：\n1.不可直视的网络环境\n 2.服务器大哥的不定期抽风\n 3.WanAndroid眼冒金星拒绝服务喔~</string>
    <string name="reload">重新加载</string>

    <!--再按一次后退键退出-->
    <string name="double_click_exit_tint">再按一次后退键退出</string>

    //通用
    <string name="http_error">网络异常</string>
    <string name="unKnown_error">未知错误</string>


    <!--SplashActivity-->
    <string name="skip">跳过</string>
    <!--LoginActivity-->
    <string name="please_input_pwd">请输入密码</string>
    <string name="please_input_username">请输入账号</string>
    <string name="login">登录</string>
    <string name="username_not_null">用户名不能为空</string>
    <string name="pwd_not_null">密码不能为空</string>

    <!--MainActivity-->
    <string name="soleil">soleil雪寂</string>
    <string name="lv6">LV6</string>
    <string name="common_vip">普通会员</string>
    <string name="_10">硬币:10</string>
    <string name="b_10">B币:10</string>
    <string name="home">首页</string>
    <string name="big_vip">我的大会员</string>
    <string name="vip_point">会员积分</string>
    <string name="unicom">免流量服务</string>
    <string name="down">离线缓存</string>
    <string name="later">稍后再看</string>
    <string name="star">我的收藏</string>
    <string name="history">历史记录</string>
    <string name="people">我的关注</string>
    <string name="wallet">B币钱包</string>
    <string name="theme">主题选择</string>
    <string name="setting_and_helper">设置与帮助</string>
    <!--HomeFragment-->
    <string name="game_center">游戏中心</string>
    <string name="search">搜索</string>
    <string name="live">直播</string>
    <string name="recommend">推荐</string>
    <string name="zf">追番</string>
    <string name="partition">分区</string>
    <string name="trend">动态</string>
    <string name="discovery">发现</string>
    <string name="failed_to_get_banner_data">Failed to get banner data</string>
    <string name="failed_to_get_live_recommned_data">Failed to get live recommend data</string>

</resources>
