<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/menu_game"
        android:icon="@drawable/ic_menu_top_game_center"
        android:orderInCategory="100"
        android:title="@string/game_center"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_download"
        android:icon="@drawable/ic_toolbar_menu_download"
        android:orderInCategory="100"
        android:title="@string/down"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_toolbar_menu_search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="always"/>

</menu>
