<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_200"
    android:background="@color/colorPrimary"
    android:gravity="bottom"
    android:paddingStart="@dimen/dp_16"
    android:paddingTop="@dimen/dp_25"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    tools:ignore="RtlSymmetry">

    <com.dream.bilibili.widget.CircleImageView
        android:id="@+id/ic_user"
        android:layout_width="@dimen/dp_74"
        android:layout_height="@dimen/dp_74"
        android:src="@mipmap/ic_user_yoyiyi"
        app:border_color="@android:color/white"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/soleil"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_14"
        app:layout_constraintTop_toBottomOf="@+id/ic_user"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tv_lv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_3"
        android:background="@drawable/shape_white_border"
        android:gravity="center"
        android:text="@string/lv6"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_10"
        app:layout_constraintStart_toEndOf="@+id/tv_name"
        app:layout_constraintTop_toTopOf="@+id/tv_name"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tv_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_6"
        android:background="@drawable/round_wihte_bg"
        android:padding="@dimen/dp_3"
        android:text="@string/common_vip"
        android:textColor="@color/nav_head_roung_text_background"
        android:textSize="@dimen/dp_10"
        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_6"
        android:padding="@dimen/dp_3"
        android:text="@string/_10"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_12"
        app:layout_constraintTop_toBottomOf="@+id/tv_state"
        tools:ignore="SpUsage" />
    <TextView
        android:id="@+id/tv_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_3"
        android:text="@string/b_10"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_12"
        android:layout_marginStart="@dimen/dp_5"
        app:layout_constraintStart_toEndOf="@id/tv_icon"
        app:layout_constraintTop_toTopOf="@+id/tv_icon"
        tools:ignore="SpUsage" />

    <ImageView
        android:contentDescription="@null"
        android:id="@+id/iv_head_noftiy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_25"
        android:src="@drawable/ic_navigation_header_notification"
        app:layout_constraintEnd_toStartOf="@+id/iv_head_switch_mode"
        app:layout_constraintTop_toTopOf="@+id/ic_user"/>


    <ImageView
        android:contentDescription="@null"
        android:id="@+id/iv_head_switch_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_10"
        android:src="@drawable/ic_switch_night"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ic_user"/>

    <ImageView
        android:contentDescription="@null"
        android:id="@+id/iv_home_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:clickable="true"
        android:src="@drawable/bili_drawerbg_logined"
        android:tint="@color/nav_head_image_background"
        android:focusable="true" />
</android.support.constraint.ConstraintLayout>