<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/normal_view"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/rl_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10">

        <ImageView
            android:id="@+id/iv_icon_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:contentDescription="@null"
            android:src="@drawable/ic_22" />

        <ImageView
            android:id="@+id/iv_icon_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/dp_5"
            android:contentDescription="@null"
            android:src="@drawable/ic_bili_logo_2016" />

        <ImageView
            android:id="@+id/iv_icon_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@null"
            android:src="@drawable/ic_33" />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/login_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_20"
        android:background="@drawable/shape_login_input_rounded_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:gravity="center_vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawablePadding="@dimen/dp_10"
                android:drawableStart="@drawable/ic_login_username_default"
                android:hint="@string/please_input_username"
                android:inputType="textVisiblePassword"
                android:maxLines="1"
                android:textColor="@color/black_80"
                android:textColorHint="@color/gray_20"
                android:textSize="@dimen/dp_16"
                tools:ignore="SpUsage" />

            <ImageButton
                android:id="@+id/ibn_delete_username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@null"
                android:paddingEnd="@dimen/dp_10"
                android:paddingStart="@dimen/dp_20"
                android:src="@drawable/ic_edittext_clear"
                android:visibility="gone" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@color/line_bg" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/dp_8"
            android:background="@android:color/transparent"
            android:drawablePadding="@dimen/dp_10"
            android:drawableStart="@drawable/ic_login_password_default"
            android:hint="@string/please_input_pwd"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@color/black_80"
            android:textColorHint="@color/gray_20"
            android:textSize="@dimen/dp_16"
            tools:ignore="SpUsage" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_45"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/shape_corner_btn"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_16"
        tools:ignore="SpUsage" />

</LinearLayout>